# wordtrace

./: .gitignore  README.md  docker-compose.yml
.agent/rules/: code-style-guide.md
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/routers/: __init__.py  keywords.py
backend/common/: prompts.py  schema.py
backend/modules/: __init__.py
backend/modules/articles/: __init__.py  articles_db.py  feeds.json  paperboy.py  rss_fetcher.py
backend/modules/graph/: __init__.py  graph_operations.py  neo4j_client.py  schema_manager.py
backend/modules/keywords/: __init__.py  deduplicator.py  keywords_db.py
backend/modules/llm/: __init__.py  embeddings.py  extractor.py  llm_client.py
backend/modules/pipeline/: __init__.py  orchestrator.py
backend/sqlite/: __init__.py
backend/tests/: __init__.py  test_graph.py
docs/: ARCHITECTURE.md  DEVELOPMENT.md
